crates/toml_edit/tests/snapshots/invalid/bool/starting-same-false.stderr
TOML parse error at line 1, column 27
  |
1 | starting-same-false     = falsey
  |                           ^^^^^^
invalid boolean, expected `false`
